IKに使う数学関数を全部自前の物に ジョイントの三角形を半透明に変更 背景をコンクリート壁に変更 Tutorialステージを追加（まだ未完成

--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -147,6 +147,24 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
+    <FxCompile Include="Resources\Shaders\OBJShaderTiling\OBJTilingGeometryShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Geometry</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Geometry</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Resources\Shaders\OBJShaderTiling\OBJTilingPixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Resources\Shaders\OBJShaderTiling\OBJTilingVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="Resources\Shaders\ObjSimpleShader\OBJSimpleGeometryShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Geometry</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Geometry</ShaderType>
@@ -310,6 +328,7 @@
     <None Include="Resources\Shaders\FbxShader\FbxShaderHeader.hlsli" />
     <None Include="Resources\Shaders\FbxSimpleShader\FbxSimpleShaderHeader.hlsli" />
     <None Include="Resources\Shaders\LineSimpleShader\LineHeader.hlsli" />
+    <None Include="Resources\Shaders\OBJShaderTiling\OBJTilingHeader.hlsli" />
     <None Include="Resources\Shaders\ObjSimpleShader\OBJSimpleHeader.hlsli" />
     <None Include="Resources\Shaders\ParticleShader\ParticleHeader.hlsli" />
     <None Include="Resources\Shaders\OBJShader\OBJHeader.hlsli" />
