--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="App\RotationBlock.cpp" />
     <ClCompile Include="App\MoveBlock.cpp" />
     <ClCompile Include="Engin\Camera\StartCamera.cpp" />
+    <ClCompile Include="App\JumpPad.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\FbxShader\FbxGeometryShader.hlsl">
@@ -340,6 +341,7 @@
     <ClInclude Include="App\RotationBlock.h" />
     <ClInclude Include="App\MoveBlock.h" />
     <ClInclude Include="Engin\Camera\StartCamera.h" />
+    <ClInclude Include="App\JumpPad.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\FbxShader\FbxShaderHeader.hlsli" />
