--- a/DirectX12CG/DirectX12CG.vcxproj.filters
+++ b/DirectX12CG/DirectX12CG.vcxproj.filters
@@ -435,6 +435,9 @@
     <ClCompile Include="Engin\Camera\StartCamera.cpp">
       <Filter>ソース ファイル\Engin\Camera</Filter>
     </ClCompile>
+    <ClCompile Include="App\JumpPad.cpp">
+      <Filter>ソース ファイル\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\ParticleShader\ParticleGeometryShader.hlsl">
@@ -765,6 +768,9 @@
     </ClInclude>
     <ClInclude Include="Engin\Camera\StartCamera.h">
       <Filter>ヘッダー ファイル\Engin\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="App\JumpPad.h">
+      <Filter>ヘッダー ファイル\Game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
