--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="App\Scene\DemoScene.cpp">
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">EnableAllWarnings</WarningLevel>
     </ClCompile>
+    <ClCompile Include="Engin\Light\CircleShadow.cpp" />
     <ClCompile Include="Engin\Camera\DemoCamera.cpp" />
     <ClCompile Include="Engin\Model\AnimationMesh.cpp" />
     <ClCompile Include="Engin\Model\AnimationModel.cpp" />
@@ -108,6 +109,7 @@
     <ClCompile Include="App\MoveBlock.cpp" />
     <ClCompile Include="Engin\Camera\StartCamera.cpp" />
     <ClCompile Include="App\JumpPad.cpp" />
+    <ClCompile Include="App\Scene\MiniatureGardenScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\FbxShader\FbxGeometryShader.hlsl">
@@ -259,6 +261,7 @@
     <ClInclude Include="App\PopEffect.h" />
     <ClInclude Include="App\CheckPoint.h" />
     <ClInclude Include="App\Scene\DemoScene.h" />
+    <ClInclude Include="Engin\Light\CircleShadow.h" />
     <ClInclude Include="Engin\Camera\DemoCamera.h" />
     <ClInclude Include="Engin\Model\AnimationMesh.h" />
     <ClInclude Include="Engin\Model\AnimationModel.h" />
@@ -342,6 +345,7 @@
     <ClInclude Include="App\MoveBlock.h" />
     <ClInclude Include="Engin\Camera\StartCamera.h" />
     <ClInclude Include="App\JumpPad.h" />
+    <ClInclude Include="App\Scene\MiniatureGardenScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\FbxShader\FbxShaderHeader.hlsli" />
